# tasksync

./: .dockerignore  .editorconfig  .env.example  .gitignore  .harness-manifest.json  AGENTS.md  CLAUDE.md  CLAUDE.md.template  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  setup.sh
.github/: CODEOWNERS  pull_request_template.md
.harness/: manifest.json
.state/: .gitignore  feature-state.json
docs/: AGENTS.md  AI-REPO-MAINTENANCE.md  ARCHITECTURE.md  CLAUDE.BLUEPRINT.md  CONTRIBUTING.md  FRONTEND.md  IOS.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md  index.md
hooks/: pre-commit  pre-push
scripts/: 1-seed.ps1  10-docker-down.ps1  2-serve.ps1  3-web.ps1  4-prepush.ps1  5-login.ps1  6-ownership-check.ps1  7-admin-check.ps1  8-docker-up.ps1  9-docker-seed.ps1  download-google-fonts.sh  (+6 more)
server/: Cargo.toml  Dockerfile  README.md
server/migrations/: 0001_init.sql  0002_task_meta.sql  0003_task_due_recur_notes.sql  0004_task_ownership.sql  0005_user_avatar.sql  0006_user_password_hash.sql  0007_task_completed_ts.sql  0008_user_sound_profile_media.sql  0009_user_ui_preferences.sql  0010_user_sound_playlist.sql  0011_user_ui_list_sort.sql  0012_task_priority_and_punt_state.sql  0013_task_delete_tombstones.sql  0014_user_font_and_quotes.sql  0015_user_streak.sql  0016_clear_stale_punt_state.sql  0017_user_streak.sql  0017_user_token_version.sql
server/src/: main.rs  routes.rs
server/src/routes/: auth.rs  integrations.rs  lists.rs  mod.rs  streak.rs  sync.rs  tasks.rs  types.rs
(+255 files in other folders)
